--- a/untitled.ui
+++ b/untitled.ui
@@ -31,20 +31,23 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>20</y>
       <width>1021</width>
-      <height>511</height>
+      <height>591</height>
      </rect>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBoxComponents">
+   <widget class="QSpinBox" name="spinBoxSensors">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>600</y>
+      <x>160</x>
+      <y>620</y>
       <width>101</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="minimum">
+     <number>2</number>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButtonClean">
@@ -63,14 +66,66 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>610</y>
+      <x>10</x>
+      <y>670</y>
       <width>181</width>
       <height>19</height>
      </rect>
     </property>
     <property name="text">
      <string>Количество компонент - </string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonLoad">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>670</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Загрузить файл</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonSimulate">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>650</y>
+      <width>171</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Случайная симуляция</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBoxComponents">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>670</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>2</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>620</y>
+      <width>181</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Количество сенсоров - </string>
     </property>
    </widget>
   </widget>
